[package]
name = "pumpfun-new-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
solana-pubkey = { version = "2.0", features = ["std", "borsh", "sha2"] }
solana-instruction = "2.0"
solana-account-info = "2.0"
solana-cpi = "2.0"
solana-program-error = "2.0"
solana-sdk = { version = "2.0", optional = true }
solana-client = { version = "2.0", optional = true }
spl-associated-token-account = "4.0"
spl-token = "6.0"
bincode = "1.3"
base64 = "0.21"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"
bs58 = "0.5"

[features]
default = []
serde = ["dep:serde", "solana-pubkey/serde"]
fetch = ["dep:solana-client", "dep:solana-sdk"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
solana-sdk = "2.0"
solana-client = "2.0"
dotenvy = "0.15"

[[example]]
name = "buy"
required-features = ["fetch"]

[[example]]
name = "sell"
required-features = ["fetch"]
